--- a/HTTP/package.json
+++ b/HTTP/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "@grpc/grpc-js": "^1.10.3",
+    "apache-arrow": "^15.0.2",
     "axios": "^1.6.8",
     "express": "^4.18.3"
   }
