Http client refactored

--- a/config.properties
+++ b/config.properties
@@ -1,5 +1,6 @@
 [SETTINGS]
 chunk_size = 1000
 host = localhost
-port = 3000
-data_file_path = ../resources/data_csv_1m.csv
+arrow_port = 3000
+http_port = 8080
+data_file_path = ../resources/data_csv_100k.csv
