Work on outputting the results

--- a/config.properties
+++ b/config.properties
@@ -3,4 +3,8 @@ chunk_size = 1000
 host = localhost
 arrow_port = 3000
 http_port = 8080
-data_file_path = ../resources/data_csv_100k.csv
+[VARIABLES]
+data_file_path = ../resources/data_csv_1m.csv
+logs_active=true
+logs_dir=logs
+
